Category tool created.

--- a/collection/dining-room.html
+++ b/collection/dining-room.html
@@ -1,15 +1,141 @@
-<!DOCTYPE html>
+&lt;!DOCTYPE html&gt;
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Dining Room • Nest &amp; Living</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <main id="<valitse hyvä nimi>">
-    <h1>Valitse hyvä otsikko tuotteelle</h1>
-
-    </p>
-  </main>
-</body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   round-dining-tables • Nest &amp; Living
+  </title>
+  <link href="./styles.css" rel="stylesheet"/>
+  <script src="./script.js">
+  </script>
+ </head>
+ <body>
+  <header id="site-header">
+  </header>
+  <div id="content">
+   <main id="category-list" role="main">
+    <h1>
+     round dining tables
+    </h1>
+    <div class="family-summary">
+     <p>
+      Islet Dining Table: The Islet dining table is a round design with a diameter of 120 cm, perfect for smaller dining spaces or intimate gatherings. Featuring a walnut finish, it showcases rich, warm tones and elegant grain patterns, adding sophistication to any dining area. The round shape enhances aesthetic appeal and promotes a more inviting atmosphere.
+     </p>
+    </div>
+    <div id="items-container">
+     <a class="variant-card" href="../products/tables/round-dining-tables/islet/index.html">
+      <figure>
+       <img alt="islet thumbnail" loading="lazy" src="../products/tables/round-dining-tables/islet/198066_1.jpg"/>
+       <figcaption>
+        <span class="variant-name">
+         islet
+        </span>
+       </figcaption>
+      </figure>
+     </a>
+    </div>
+    <h1>
+     upholstered metal dining chairs
+    </h1>
+    <div class="family-summary">
+     <p>
+      <strong>
+       Bow Dining Table Chairs
+      </strong>
+      <br/>
+      The Bow dining table chair is designed for versatility, available in three distinct color variants: khaki, black, and red. Each chair maintains a cohesive design and dimensions, ensuring a unified look across all options. Crafted from durable materials, the Bow chairs provide both comfort and support, making them an excellent addition to any dining space.
+     </p>
+     <p>
+      <strong>
+       Merida Bar Stools
+      </strong>
+      <br/>
+      The Merida bar stool comes in two elegant variants, showcasing different color combinations. The first variant features a natural oak frame paired with a natural white seat, creating a light and airy aesthetic that enhances various interior styles. This combination emphasizes the warmth of the oak while offering a clean contrast with the seat, making the Merida bar stools a stylish choice for any bar or kitchen area.
+     </p>
+    </div>
+    <div id="items-container">
+     <a class="variant-card" href="../products/seating/upholstered-metal-dining-chairs/bow/index.html">
+      <figure>
+       <img alt="bow thumbnail" loading="lazy" src="../products/seating/upholstered-metal-dining-chairs/bow/198099_1.jpg"/>
+       <figcaption>
+        <span class="variant-name">
+         bow
+        </span>
+       </figcaption>
+      </figure>
+     </a>
+     <a class="variant-card" href="../products/seating/upholstered-metal-dining-chairs/merida/index.html">
+      <figure>
+       <img alt="merida thumbnail" loading="lazy" src="../products/seating/upholstered-metal-dining-chairs/merida/198084_1.jpg"/>
+       <figcaption>
+        <span class="variant-name">
+         merida
+        </span>
+       </figcaption>
+      </figure>
+     </a>
+    </div>
+    <h1>
+     upholstered wood dining chairs
+    </h1>
+    <div class="family-summary">
+     <p>
+      <strong>
+       Merida Bar Stools
+      </strong>
+      <br/>
+      The Merida bar stool with backrest features a natural oak frame paired with a natural white seat. Designed for standard bar heights, this stool offers comfort and support, making it an excellent addition to any bar setting. The warm, earthy tone of the natural oak beautifully contrasts with the lighter seat, creating a visually appealing look.
+     </p>
+     <p>
+      <strong>
+       Nicola Dining Table Chairs
+      </strong>
+      <br/>
+      The Nicola dining table chair is crafted in a natural oak finish, providing a warm and inviting aesthetic that complements various dining room styles. Upholstered in beige fabric, this chair adds elegance and comfort, making it suitable for both casual and formal dining settings. It is designed to fit standard dining table heights, ensuring a perfect match for your dining experience.
+     </p>
+     <p>
+      <strong>
+       Niela Dining Table Chairs
+      </strong>
+      <br/>
+      The Niela dining table chairs come in two distinct variants, differing primarily in wood finish. The first variant features a smoked oak frame, offering a darker and more sophisticated aesthetic that enhances the chair's design richness. The second variant is made from natural oak, providing a lighter, more traditional look that showcases the wood's natural beauty.
+     </p>
+    </div>
+    <div id="items-container">
+     <a class="variant-card" href="../products/seating/upholstered-wood-dining-chairs/merida/index.html">
+      <figure>
+       <img alt="merida thumbnail" loading="lazy" src="../products/seating/upholstered-wood-dining-chairs/merida/198085_1.jpg"/>
+       <figcaption>
+        <span class="variant-name">
+         merida
+        </span>
+       </figcaption>
+      </figure>
+     </a>
+     <a class="variant-card" href="../products/seating/upholstered-wood-dining-chairs/nicola/index.html">
+      <figure>
+       <img alt="nicola thumbnail" loading="lazy" src="../products/seating/upholstered-wood-dining-chairs/nicola/200739_1.jpg"/>
+       <figcaption>
+        <span class="variant-name">
+         nicola
+        </span>
+       </figcaption>
+      </figure>
+     </a>
+     <a class="variant-card" href="../products/seating/upholstered-wood-dining-chairs/niela/index.html">
+      <figure>
+       <img alt="niela thumbnail" loading="lazy" src="../products/seating/upholstered-wood-dining-chairs/niela/200737_1.jpg"/>
+       <figcaption>
+        <span class="variant-name">
+         niela
+        </span>
+       </figcaption>
+      </figure>
+     </a>
+    </div>
+   </main>
+  </div>
+  <footer id="site-footer">
+  </footer>
+ </body>
 </html>
