--- a/index.html
+++ b/index.html
@@ -78,26 +78,27 @@
     </p>
 
     <div class="solution-buttons">
-      <a href="/beds.html" class="solution-btn">
+      <a href="/products/beds-mattresses/beds" class="solution-btn">
         <img src="/images/beds.png" alt="Beds icon" />
         Beds
       </a>
 
-      <a href="/bedding-accessories.html" class="solution-btn">
+      <a href="products/pillows-duvets" class="solution-btn">
         <img src="/images/bedding-accessories.png" alt="Bedding Accessories icon" />
         Bedding Accessories
       </a>
 
-      <a href="/headboards.html" class="solution-btn">
+      <a href="products/bedroom-furniture/headboards" class="solution-btn">
         <img src="/images/headboards.png" alt="Headboards icon" />
         Headboards
       </a>
 
-      <a href="/mattresses-toppers.html" class="solution-btn">
+      <a href="products/beds-mattresses" class="solution-btn">
         <img src="/images/mattresses-toppers.png" alt="Mattresses &amp; Toppers icon" />
         Mattresses &amp; Toppers
       </a>
     </div>
+    <div class="with-texture" id="solution-content"></div>
   </section>
 
 
