--- a/products/seating/upholstered-metal-dining-chairs/merida/198084.html
+++ b/products/seating/upholstered-metal-dining-chairs/merida/198084.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="198084" name="sku"/>
-<title>
-   MERIDA BAR STOOL WITHOUT BACKREST, NATURAL OAK / NATURAL WHITE TEDDY SEAT (2 PCS/PKT) (11993) • Nest &amp; Living
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="198084" name="sku"/>
+  <title>
+   MERIDA BAR STOOL WITHOUT BACKREST, NATURAL OAK / NATURAL WHITE TEDDY SEAT (2 PCS/PKT) (11993) • Nest & Living
   </title>
-<link href="../../../../styles.css" rel="stylesheet"/>
-<script src="../../../../script.js">
-</script>
-</head>
-<body>
-<header id="site-header">
-</header>
-<div id="content">
-<main id="product" role="main">
-<nav>
-<a href="../index.html">
+  <link href="../../../../styles.css" rel="stylesheet"/>
+  <script src="../../../../script.js">
+  </script>
+ </head>
+ <body>
+  <header id="site-header">
+  </header>
+  <div id="content">
+   <main id="product" role="main">
+    <nav>
+     <a href="../index.html">
       « Back
      </a>
      /
@@ -35,102 +35,102 @@
      <a href="/products/seating/upholstered-metal-dining-chairs/merida/">
       merida
      </a>
-</nav>
-<article itemscope="" itemtype="https://schema.org/Product">
-<header>
-<h1 itemprop="name">
+    </nav>
+    <article itemscope="" itemtype="https://schema.org/Product">
+     <header>
+      <h1 itemprop="name">
        Merida bar stool, natural oak / natural white seat
       </h1>
-<p class="sku">
+      <p class="sku">
        198084
       </p>
-</header>
-<section class="product-gallery">
-<img alt="Merida bar stool with a natural oak frame and a natural white teddy fabric seat, side view showing minimalist design and clean lines" loading="lazy" src="198084_1.jpg"/>
-<img alt="Side angle of Merida bar stool highlighting the comfort and simple modern design of the natural white teddy seat and sturdy natural oak legs" loading="lazy" src="198084_2.jpg"/>
-<img alt="Rear view of Merida bar stool showing natural oak legs and support structure under the natural white teddy fabric seat" loading="lazy" src="198084_3.jpg"/>
-</section>
-<section>
-<h2>
+     </header>
+     <section class="product-gallery">
+      <img alt="Merida bar stool with a natural oak frame and a natural white teddy fabric seat, side view showing minimalist design and clean lines" loading="lazy" src="198084_1.jpg"/>
+      <img alt="Side angle of Merida bar stool highlighting the comfort and simple modern design of the natural white teddy seat and sturdy natural oak legs" loading="lazy" src="198084_2.jpg"/>
+      <img alt="Rear view of Merida bar stool showing natural oak legs and support structure under the natural white teddy fabric seat" loading="lazy" src="198084_3.jpg"/>
+     </section>
+     <section>
+      <h2>
        Description
       </h2>
-<p itemprop="description">
-       The Merida bar stool combines Scandinavian minimalist design with comfort and durability. Crafted with a solid natural oak frame, it features a cozy natural white teddy fabric seat offering softness and warmth. This set of two bar stools enhances any bar or kitchen island area, fitting effortlessly into your modern home décor. Available in Gold, Silver, and Bronze tiers, each offering distinct quality and finish options to suit your preferences. Perfectly paired within the NEST &amp; LIVING collection, it elevates your seating experience with timeless style and functional comfort.
+      <p itemprop="description">
+       The Merida bar stool combines Scandinavian minimalist design with comfort and durability. Crafted with a solid natural oak frame, it features a cozy natural white teddy fabric seat offering softness and warmth. This set of two bar stools enhances any bar or kitchen island area, fitting effortlessly into your modern home décor. Available in Gold, Silver, and Bronze tiers, each offering distinct quality and finish options to suit your preferences. Perfectly paired within the NEST & LIVING collection, it elevates your seating experience with timeless style and functional comfort.
       </p>
-</section>
-<section>
-<h2>
+     </section>
+     <section>
+      <h2>
        Technical specifications
       </h2>
-<table>
-<tbody>
-<tr>
-<th scope="row">
+      <table>
+       <tbody>
+        <tr>
+         <th scope="row">
           Material
          </th>
-<td>
+         <td>
           Natural oak frame, teddy fabric seat
          </td>
-</tr>
-<tr>
-<th scope="row">
+        </tr>
+        <tr>
+         <th scope="row">
           Seat Color
          </th>
-<td>
+         <td>
           Natural white
          </td>
-</tr>
-<tr>
-<th scope="row">
+        </tr>
+        <tr>
+         <th scope="row">
           Frame Color
          </th>
-<td>
+         <td>
           Natural oak
          </td>
-</tr>
-<tr>
-<th scope="row">
+        </tr>
+        <tr>
+         <th scope="row">
           Set Quantity
          </th>
-<td>
+         <td>
           2 pcs / packet
          </td>
-</tr>
-<tr>
-<th scope="row">
+        </tr>
+        <tr>
+         <th scope="row">
           Dimensions
          </th>
-<td>
+         <td>
           Seat height approx. 65 cm; total height approx. 85 cm; width approx. 38 cm; depth approx. 38 cm
          </td>
-</tr>
-<tr>
-<th scope="row">
+        </tr>
+        <tr>
+         <th scope="row">
           Product Tier
          </th>
-<td>
+         <td>
           Available in Gold, Silver, and Bronze tiers
          </td>
-</tr>
-</tbody>
-</table>
-</section>
-</article>
-<section>
-<h2>
+        </tr>
+       </tbody>
+      </table>
+     </section>
+    </article>
+    <section>
+     <h2>
       Retailers
      </h2>
-<ul>
-<li>
-<a href="https://www.masku.com/tuote/198084-merida-baarituoli-natural-tammi-luonnovalk-istuin" rel="noopener" target="_blank">
+     <ul>
+      <li>
+       <a href="https://www.masku.com/tuote/198084-merida-baarituoli-natural-tammi-luonnovalk-istuin" rel="noopener" target="_blank">
         https://www.masku.com/tuote/198084-merida-baarituoli-natural-tammi-luonnovalk-istuin
        </a>
-</li>
-</ul>
-</section>
-</main>
-</div>
-<footer id="site-footer">
-</footer>
-</body>
+      </li>
+     </ul>
+    </section>
+   </main>
+  </div>
+  <footer id="site-footer">
+  </footer>
+ </body>
 </html>
